[package]
name = "trin"
version = "0.1.0"
authors = ["Jason Carver <ut96caarrs@snkmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.0", features = ["blocking"] }
serde_json = "1.0.59"
threadpool = "1.8.1"
discv5 = "0.1.0-beta.3"
log = "0.4.14"
tokio = {version = "1.2.0", features = ["full"]}
futures = "0.3.13"
parking_lot = "0.11.1"
env_logger = "0.8.2"
clap = "2.33.3"
